Use transifex to pull translations for rhel6-branch
Create a new branch in transifex for anaconda.rhel6-branch where
translators can do work for RHEL-6 releases.  Pull po files for each
release so we ensure we get the latest ones, like we do on master and
newer Fedora branches.

Related: rhbz#744094

--- a/Makefile.am
+++ b/Makefile.am
@@ -67,6 +67,9 @@ sed_verbose = $(sed_verbose_$(V))
 sed_verbose_ = $(sed_verbose_$(AM_DEFAULT_VERBOSITY))
 sed_verbose_0 = @echo "  SED    "$@;
 
+TX_PULL_ARGS = -a --disable-overwrite
+TX_PUSH_ARGS = -s
+
 $(PACKAGE_NAME).spec: $(PACKAGE_NAME).spec.in
 	$(sed_verbose)sed -e 's/#VERSION#/$(PACKAGE_VERSION)/' < $< > $@
 
@@ -83,14 +86,17 @@ tag:
 	@git tag -s -a -m "Tag as $(ARCHIVE_TAG)" $(ARCHIVE_TAG)
 	@echo "Tagged as $(ARCHIVE_TAG)"
 
+po-pull:
+	rm -f po/en@boldquot.gmo po/en@boldquot.po
+	rm -f po/en@quot.gmo po/en@quot.po
+	tx pull $(TX_PULL_ARGS)
+
 scratch:
 	$(MAKE) ARCHIVE_TAG=HEAD dist
+	git checkout -- po/$(PACKAGE_NAME).pot
 
 archive:
-	$(MAKE) tag
-	$(MAKE) dist
-	git checkout -- po/$(PACKAGE_NAME).pot
-	( cd po ; for f in *.po ; do git checkout -- $$f 2>/dev/null ; done )
+	$(MAKE) tag && $(MAKE) dist && git checkout -- po/$(PACKAGE_NAME).pot
 
 release: archive
 
@@ -107,7 +113,7 @@ pycheck-file:
 api:
 	doxygen docs/api.cfg
 
-bumpver:
+bumpver: po-pull
 	@opts="-n $(PACKAGE_NAME) -v $(PACKAGE_VERSION) -r $(PACKAGE_RELEASE) -b $(PACKAGE_BUGREPORT)" ; \
 	if [ ! -z "$(IGNORE)" ]; then \
 		opts="$${opts} -i $(IGNORE)" ; \
@@ -116,7 +122,8 @@ bumpver:
 		opts="$${opts} -m $(MAP)" ; \
 	fi ; \
 	scripts/makebumpver $${opts} || exit 1 ; \
-	$(MAKE) -C po $(PACKAGE_NAME).pot-update
+	$(MAKE) -C po $(PACKAGE_NAME).pot-update ; \
+	tx push $(TX_PUSH_ARGS)
 
 install-buildrequires:
 	yum install $$(grep BuildRequires: anaconda.spec.in | cut -d ' ' -f 2)
