--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -232,6 +232,78 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Tue Oct 11 2011 Chris Lumens <clumens@redhat.com> - 17.1-1
+- Pull grub-efi and efibootmgr into the package list as needed. (#742042)
+  (pjones)
+- analog: properly log user.info where NetworkManager (also) communicates.
+  (akozumpl)
+- analog: bump the version to rsyslog 5 (akozumpl)
+- partitioning.py: reference to list of free regions is shadowed by a double.
+  (akozumpl)
+- Handle strange lang boot argument values. (akozumpl)
+- LANG_DEFAULT lives in lang.c. (akozumpl)
+- Include docs/transifex.txt in release dist. (dcantrell)
+- fcoe: modprobe the VLAN layer module. (akozumpl)
+- Remove some raid error checking pykickstart can do for us. (clumens)
+- Set default BOOTPROTO=dhcp for network service (minimal installs) (#741199)
+  (rvykydal)
+- remove argument ROOT_PATH from getDefaultKeyboard() calls (removed from
+  method with 3e8d08cac6aa89f001c5b32dba251a62a45ed7f4) (vpodzime)
+- Default to an active network device after reboot on Fedora (ONBOOT) (#498207)
+  (rvykydal)
+- Fix: Allow EFI slot_ids in hexdecimal (#742141). (fabian.deutsch)
+- Move the fedora logo to the left. (akozumpl)
+- fcoe: fix detecting FCoE NIC (mcb30)
+- Do not show loop devices in the filtering UI. (akozumpl)
+- dispatcher: do not request "group-selection" with "tasksel". (akozumpl)
+- upgrade: do not insist on running the "bootloader" step. (akozumpl)
+- Fix sigsegv in setKickstartNetwork() (strdup() from a NULL). (akozumpl)
+- dracut args: "rhgb quiet" should come last. (akozumpl)
+- Add nfsiso: handling to parseNfsHostPathOpts (bcl)
+- Only check relevant devices for dirty filesystems. (#741206) (dlehman)
+- Make sure storage is reset just before partitioning, always. (dlehman)
+- Move selection of default boot drive into bootloader. (dlehman)
+- Show error dialog instead of traceback on fstab type mismatch. (#649171)
+  (dlehman)
+- Try a test mount and keep fstab mismatches if it succeeds. (#649171)
+  (dlehman)
+- Check the return value of get_file_list (#741466) (bcl)
+- imount.c: include fcntl.h before ext2fs/ext2fs.h. (akozumpl)
+- Write the grub.conf after setting up the new EFI bootloader (#741994)) (bcl)
+- botoloader: write 'ip=eth0:dhcp,auto6' instead of 'ip=eth0:dhcp
+  ip=eth0:auto6' (akozumpl)
+- gitingore: ignore po/*.po.new files. (akozumpl)
+- Put bios boot partitions on all gpt disk on bios systems. (#738964) (dlehman)
+- Change default bootloader timeout from 20sec to 5sec. (#727831) (dlehman)
+- Bootloader stage1_drive is more than a suggestion. (#738964) (dlehman)
+- Mark the live device's parent devices protected. (#738964) (dlehman)
+- it is anaconda-shell (akozumpl)
+- Improve the clarity of the missing bios boot partition error. (#731549)
+  (dlehman)
+- Remove tmp.mount (systemd handles this for us now) (wwoods)
+- Move dependency info into the unit files (wwoods)
+- move anaconda-shell.service to the correct filename (wwoods)
+- make anaconda-shell.service a template, put it on tty2 & hvc1 (wwoods)
+- Return after writing log message, not before. (rvykydal)
+- Do not reactivate network device needlessly on s390 (#739846) (rvykydal)
+- Start NM in loader on s390 until we have systemd init here too (#733680)
+  (rvykydal)
+- Revert "Set debug_package to %{nil} so we don't strip our binaries."
+  (akozumpl)
+- Fix createUser and createGroup to work with kickstart defaults (#739428)
+  (bcl)
+- Update test for createUser and createGroup (#739428) (bcl)
+- fcoe: handle Broadcom fcoe devices correctly. (akozumpl)
+- fcoe: the control path in sysfs is now /sys/module/libfcoe (akozumpl)
+- fcoe: load bnx2fc if relevant. (akozumpl)
+- Fix post-commit lookup of extended partitions. (#737532) (dlehman)
+- Don't reboot when closing the live installer via the window decoration.
+  (clumens)
+- Use the luks format's mapName when creating temp LUKSDevice. (#722952)
+  (dlehman)
+- Reset device attr after using temp dev. (#722952) (dlehman)
+- Make sure there are no tempvg paths even if formatting. (#737916) (dlehman)
+
 * Thu Sep 15 2011 Chris Lumens <clumens@redhat.com> - 17.0-1
 - Sort partitioning commmands in anaconda-ks.cfg. (#736527) (dlehman)
 - Install grub2 when upgrading on bios x86. (#735730) (dlehman)
