--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -232,6 +232,11 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Wed Nov 02 2011 Brian C. Lane <bcl@redhat.com> - 16.25-1
+- Try to fix up detection of live backing devices. (#750469) (dlehman)
+- Omit protected disks from bootloader.drives. (dlehman)
+- If no AP is selected don't write config files (#750896) (bcl)
+
 * Wed Oct 26 2011 Chris Lumens <clumens@redhat.com> - 16.24-1
 - Don't use GPT disklabels on Lenovo BIOS systems. (#749325) (dlehman)
 
