--- a/configure.ac
+++ b/configure.ac
@@ -132,7 +132,7 @@ PKG_CHECK_MODULES([X11], [x11 >= 1.3])
 PKG_CHECK_MODULES([XCOMPOSITE], [xcomposite >= 0.4.1])
 PKG_CHECK_MODULES([GLIB], [glib-2.0 >= 2.16.1])
 PKG_CHECK_MODULES([GTK_X11], [gtk+-x11-3.0 >= 3.0])
-PKG_CHECK_MODULES([GDK], [gdk-2.0 >= 2.16.1])
+PKG_CHECK_MODULES([GDK], [gdk-3.0])
 PKG_CHECK_MODULES([NETWORKMANAGER], [NetworkManager >= 0.7.1])
 PKG_CHECK_MODULES([LIBNL], [libnl-1 >= 1.0])
 PKG_CHECK_MODULES([LIBNM_GLIB], [libnm-glib >= 0.7.1 libnm-util >= 0.7.1])
