--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 *.a
 *.bak
 *.desktop.in.h
+*.gir
 *.glade.h
 *.la
+*.lo
 *.o
 *.pyc
 *.so
+*.typelib
 *~
 .*.swp
 .depend
@@ -29,6 +32,7 @@ config.sub
 configure
 depcomp
 dirbrowser
+gtk-doc.m4
 install-sh
 keymaps-override-*
 lang-names
@@ -36,11 +40,11 @@ lang-table.h
 libtool
 liveinst.h
 ltmain.sh
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
+libtool.m4
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
+lt~obsolete.m4
 missing
 po/*.gmo
 po/*.po
@@ -54,5 +58,11 @@ po/stamp-po
 py-compile
 stamp-h1
 tags
-xutils.la
-xutils_la-xutils.lo
+updates.img
+widgets/doc/AnacondaWidgets-*.txt
+widgets/doc/AnacondaWidgets.*
+widgets/doc/*.stamp
+widgets/doc/html
+widgets/doc/xml
+widgets/gtk-doc.make
+widgets/src/gettext.h
