Populate the welcome spoke with translations
Get the available translations for anaconda
and populate the welcome spoke with them.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -112,6 +112,7 @@ Requires: dosfstools
 Requires: e2fsprogs >= %{e2fsver}
 Requires: gzip
 Requires: libarchive
+Requires: python-babel
 %ifarch %{ix86} x86_64 ia64
 Requires: dmidecode
 %endif
