--- a/data/systemd/anaconda.service
+++ b/data/systemd/anaconda.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=The anaconda loader
+Description=the anaconda installation program
 Wants=instperf.service rsyslog.service udev-settle.service
 After=instperf.service rsyslog.service udev-settle.service
 
@@ -7,6 +7,6 @@ After=instperf.service rsyslog.service udev-settle.service
 Environment=HOME=/root MALLOC_CHECK_=2 MALLOC_PERTURB_=204 PATH=/usr/bin:/bin:/sbin:/usr/sbin:/mnt/sysimage/bin:/mnt/sysimage/usr/bin:/mnt/sysimage/usr/sbin:/mnt/sysimage/sbin PYTHONPATH=/tmp/updates TERM=linux
 Type=oneshot
 WorkingDirectory=/root
-ExecStart=/sbin/loader
+ExecStart=/usr/sbin/anaconda
 StandardInput=tty-force
 TimeoutSec=0
