We've got you cornered now, loader: remove from automake/spec/po
Seriously, we don't need loader anymore. Remove it from
autoconf/automake, the specfile, and POTFILES.in.

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,7 +19,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = pyanaconda loader gptsync po data \
+SUBDIRS = pyanaconda gptsync po data \
 	  tests utils scripts docs
 
 EXTRA_DIST = config.rpath COPYING \
