move linuxrc.s390 out of harm's way
We still need linuxrc.s390 (that's a project for another year), so move
it out of loader/ while we warm up the orbital lasers.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -29,6 +29,11 @@ langdir               = $(datadir)/$(PACKAGE_NAME)
 lang_DATA             = lang-names
 dist_lang_DATA        = lang-table
 
+if IS_S390
+shareddir             = $(datadir)/$(PACKAGE_NAME)
+dist_shared_SCRIPTS   = linuxrc.s390
+endif
+
 MAINTAINERCLEANFILES = Makefile.in
 
 lang-names: lang-table
