Add support for HFS+ partitions
We'll want to actually create HFS+ partitions, so add the missing bits
for that.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -135,6 +135,7 @@ Requires: zenity
 %endif
 Requires: createrepo >= %{createrepover}
 Requires: squashfs-tools
+Requires: hfsplus-tools
 Requires: genisoimage >= %{genisoimagever}
 Requires: GConf2 >= %{gconfversion}
 %ifarch %{ix86} x86_64
